# dockerContainer

./: Labo2_Q&A.txt  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/app/backend/actions/: __init__.py
api/app/schemas/: course.py  lecturer.py
api/backend/api/: api.py
api/backend/schemas/: __init__.py
api/data/: courses.json  lecturers.json
nginx/: Dockerfile  nginx.conf
web/: Dockerfile  app.ini  requirements.txt
web/webapp/: config.py  requirements.txt
web/webapp/templates/: base.html
